--- a/app/hp.html
+++ b/app/hp.html
@@ -193,8 +193,217 @@
 
     </section>
 
+    <!-- HP Tag Secondary - "Egalite des Chanches"   -->
+    <section id="section1" class="hp-tag--primary">
+
+        <!-- Wrapper -->
+        <div class="l-content">
+            <div class="l-d l-t">
+
+                <div class="hp-tag--primary__body">
+                    <!-- Tag Articles -->
+                    <div class="hp-tag--primary__items">
+                        <article class="hp-tag--primary__item hp-tag--primary__item--1">
+                            <div class="hp-tag--primary__item__content hp-tag--primary__item__col">
+                                <div class="hp-tag--primary__item__content-wrap">
+                                    <h2 class="hp-tag--primary__title">Égalité des Chances</h2>
+                                    <h4 class="hp-tag--primary__item__subtitle">En amont des études</h4>
+                                    <h3 class="hp-tag--primary__item__title">Des programmes d’accès aux grandes Ecoles de la Culture <span class="c-dot"><span class="c-dot__circle"></span></span></h3>
+                                    <p class="hp-tag--primary__item__intro">Découvrez nos programmes Egalité des Chances, organisés en partenariat avec les Ecoles supérieures de la Culture.</p>
+                                    <a href="" class="c-btn hp-tag--primary__item__btn">
+                                        <span>NOS PROGRAmMES</span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="hp-tag--primary__item__media hp-tag--primary__item__col">
+                                <div class="hp-tag--primary__item__media-wrap">
+                                    <img src="http://placehold.it/650x440" alt="" class="hp-tag--primary__item__img">
+                                </div>
+                            </div>
+                        </article>
+                        <article class="hp-tag--primary__item hp-tag--primary__item--2">
+                            <div class="hp-tag--primary__item__content hp-tag--primary__item__col">
+                                <div class="hp-tag--primary__item__content-wrap">
+                                    <h4 class="hp-tag--primary__item__subtitle">En amont des études</h4>
+                                    <h3 class="hp-tag--primary__item__title">Des programmes d'accompagnement <span class="c-dot"><span class="c-dot__circle"></span></span></h3>
+                                    <p class="hp-tag--primary__item__intro">La Fondation continue de suivre les élèves avec un accompagnement pédagogique, culturel, financier et professionnel.</p>
+                                    <a href="" class="c-btn hp-tag--primary__item__btn">
+                                        <span>NOS PROGRAmMES</span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="hp-tag--primary__item__media hp-tag--primary__item__col">
+                                <div class="hp-tag--primary__item__media-wrap">
+                                    <img src="http://placehold.it/650x440" alt="" class="hp-tag--primary__item__img">
+                                </div>
+                            </div>
+                        </article>
+                        <article class="hp-tag--primary__item hp-tag--primary__item--3">
+                            <div class="hp-tag--primary__item__content hp-tag--primary__item__col">
+                                <div class="hp-tag--primary__item__content-wrap">
+                                    <h4 class="hp-tag--primary__item__subtitle">En amont des études</h4>
+                                    <h3 class="hp-tag--primary__item__title">Des programmes d’accès aux grandes Ecoles de la Culture <span class="c-dot"><span class="c-dot__circle"></span></span></h3>
+                                    <p class="hp-tag--primary__item__intro">Découvrez nos programmes Egalité des Chances, organisés en partenariat avec les Ecoles supérieures de la Culture.</p>
+                                    <a href="" class="c-btn hp-tag--primary__item__btn">
+                                        <span>NOS PROGRAmMES</span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="hp-tag--primary__item__media hp-tag--primary__item__col">
+                                <div class="hp-tag--primary__item__media-wrap">
+                                    <img src="http://placehold.it/650x440" alt="" class="hp-tag--primary__item__img">
+                                </div>
+                            </div>
+                        </article>
+                        <article class="hp-tag--primary__item hp-tag--primary__item--4">
+                            <div class="hp-tag--primary__item__content hp-tag--primary__item__col">
+                                <div class="hp-tag--primary__item__content-wrap">
+                                    <!-- <h4 class="hp-tag--primary__item__subtitle">En amont des études</h4> -->
+                                    <h3 class="hp-tag--primary__item__title">Residences<span class="c-dot"><span class="c-dot__circle"></span></span></h3>
+                                    <p class="hp-tag--primary__item__intro">Découvrez nos programmes Egalité des Chances, organisés en partenariat avec les Ecoles supérieures de la Culture.</p>
+                                    <a href="" class="c-btn hp-tag--primary__item__btn">
+                                        <span>NOS PROGRAmMES</span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="hp-tag--primary__item__media hp-tag--primary__item__col">
+                                <div class="hp-tag--primary__item__media-wrap">
+                                    <img src="http://placehold.it/650x440" alt="" class="hp-tag--primary__item__img">
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                    <span class="c-dot hp-tag--primary__body__dot"><span class="c-dot__circle"></span></span>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
+    <!-- HP Tag Secondary - "Cohesion Social"   -->
+    <section id="section2" class="hp-tag--secondary">
+
+        <!-- Wrapper -->
+        <div class="l-content">
+            <div class="l-d l-t l-p">
+
+                <div class="hp-tag--secondary__body">
+                    <!-- Tag Head -->
+                    <div class="hp-tag--secondary__head">
+                        <h2 class="hp-tag--secondary__title">COHÉSION SOCIALe <span class="c-dot"><span class="c-dot__circle"></span></span></h2>
+                        <p class="hp-tag--secondary__intro">L’éducation artistique et culturelle, des programmes de terrain à la reconnaissance institutionnelle</p>
+                    </div>
+
+                    <!-- Tag Articles -->
+                    <div class="hp-tag--secondary__items">
+                        <article class="hp-tag--secondary__item">
+                            <h3 class="hp-tag--secondary__item__title">Programmes</h3>
+                            <div class="hp-tag--secondary__item__media">
+                                <img src="http://placehold.it/525x271" alt="" class="hp-tag--secondary__item__img">
+                            </div>
+                            <div class="hp-tag--secondary__item__content">
+                                <p class="hp-tag--secondary__item__intro">La Fondation met en place des programmes d’accès à la culture et à la pratique artistique pour les jeunes issus de milieux modestes.</p>
+                                <a href="" class="c-btn hp-tag--secondary__item__btn">
+                                    <span>NOS PROGRAmMES</span>
+                                </a>
+                            </div>
+                        </article>
+                        <article class="hp-tag--secondary__item">
+                            <h3 class="hp-tag--secondary__item__title">Prix</h3>
+                            <div class="hp-tag--secondary__item__media">
+                                <img src="http://placehold.it/525x271" alt="" class="hp-tag--secondary__item__img">
+                            </div>
+                            <div class="hp-tag--secondary__item__content">
+                                <p class="hp-tag--secondary__item__intro">En lien avec des partenaires institutionnels, la Fondation remet chaque année des prix qui récompensent des projets d’éducation artistique et culturelle exemplaires, en France et à l’étranger.</p>
+                                <a href="" class="c-btn hp-tag--secondary__item__btn">
+                                    <span>NOS prix</span>
+                                </a>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
+    <!-- HP Tag Secondary - "Cohesion Social"   -->
+    <section id="section3" class="hp-tag--tertiary">
+
+        <!-- Wrapper -->
+        <div class="l-content">
+            <div class="l-d l-t l-p--modified">
+
+                <div class="hp-tag--tertiary__body">
+                    <!-- Tag Head -->
+                    <div class="hp-tag--tertiary__head">
+                        <h2 class="hp-tag--tertiary__title">Je m'oriente<span class="c-dot"><span class="c-dot__circle"></span></span></h2>
+                        <div class="hp-tag--tertiary__btns">
+                            <p class="hp-tag--tertiary__btns__title">decouvrir les</p>
+                            <a href="" class="c-btn hp-tag--tertiary__btn">
+                                <span>Métiers</span>
+                            </a>
+                            <a href="" class="c-btn hp-tag--tertiary__btn">
+                                <span>écoles</span>
+                            </a>
+                            <a href="" class="c-btn hp-tag--tertiary__btn">
+                                <span>champs artistiqueS</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Tag Articles -->
+                    <div class="hp-tag--tertiary__items">
+                        <article class="hp-tag--tertiary__item hp-tag--tertiary__item--big">
+                            <p class="hp-tag--tertiary__item__type">Les metiers</p>
+                            <h3 class="hp-tag--tertiary__item__title"><a href="#">Archeologue</a></h3>
+                            <div class="hp-tag--tertiary__item__media">
+                                <img src="http://placehold.it/600x360" alt="" class="hp-tag--tertiary__item__img">
+                            </div>
+                            <p class="hp-tag--tertiary__item__intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+                        </article>
+                        <div class="hp-tag--tertiary__items__small hp-tag--tertiary__slider">
+                            <article class="hp-tag--tertiary__item hp-tag--tertiary__item--small">
+                                <p class="hp-tag--tertiary__item__type">Les metiers</p>
+                                <h3 class="hp-tag--tertiary__item__title"><a href="#">Archeologue</a></h3>
+                                <div class="hp-tag--tertiary__item__media">
+                                    <img src="http://placehold.it/376x226" alt="" class="hp-tag--tertiary__item__img">
+                                </div>
+                            </article>
+                            <article class="hp-tag--tertiary__item hp-tag--tertiary__item--small">
+                                <p class="hp-tag--tertiary__item__type">Les metiers</p>
+                                <h3 class="hp-tag--tertiary__item__title"><a href="#">Archeologue</a></h3>
+                                <div class="hp-tag--tertiary__item__media">
+                                    <img src="http://placehold.it/376x226" alt="" class="hp-tag--tertiary__item__img">
+                                </div>
+                            </article>
+                            <article class="hp-tag--tertiary__item hp-tag--tertiary__item--small">
+                                <p class="hp-tag--tertiary__item__type">Les metiers</p>
+                                <h3 class="hp-tag--tertiary__item__title"><a href="#">Archeologue</a></h3>
+                                <div class="hp-tag--tertiary__item__media">
+                                    <img src="http://placehold.it/376x226" alt="" class="hp-tag--tertiary__item__img">
+                                </div>
+                            </article>
+                            <article class="hp-tag--tertiary__item hp-tag--tertiary__item--small">
+                                <p class="hp-tag--tertiary__item__type">Les metiers</p>
+                                <h3 class="hp-tag--tertiary__item__title"><a href="#">Archeologue</a></h3>
+                                <div class="hp-tag--tertiary__item__media">
+                                    <img src="http://placehold.it/376x226" alt="" class="hp-tag--tertiary__item__img">
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
     <!-- HP Newsletter Block -->
-    <section id="section1" class="hp-partners">
+    <section class="hp-partners">
 
       <!-- Wrapper -->
       <div class="l-content">
@@ -215,7 +424,7 @@
     </section>
 
     <!-- B-RELATED -->
-    <section id="section2" class="b-related">
+    <section class="b-related">
 
       <!-- Wrapper -->
       <div class="l-content">
@@ -294,7 +503,7 @@
     </section>
 
     <!-- HP Newsletter Block -->
-    <section id="section3" class="hp-newsletter">
+    <section class="hp-newsletter">
 
         <!-- Wrapper -->
         <div class="l-content">
