partner single, social share, article content

--- a/app/index.html
+++ b/app/index.html
@@ -151,7 +151,7 @@
       </div>
 
       <!-- Hero Content -->
-      <div class="b-hero__content-wrap">
+      <div class="b-hero__content-wrap b-hero__content-wrap--overPhone">
 
         <!-- Wrapper -->
         <div class="l-content">
