update fondation page

--- a/app/fondation.html
+++ b/app/fondation.html
@@ -232,7 +232,7 @@
 
                             <h2 class="p-fondation__section-title p-fondation__culture__title">La Fondation Culture & Diversité en images</h2>
                             <figure class="p-fondation__culture__media">
-                                <img src="http://placehold.it/750x350" alt="">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/Z_fYQugJIUs" frameborder="0" allowfullscreen></iframe>
                             </figure>
 
                         </div>
@@ -251,7 +251,7 @@
 
                             <h2 class="p-fondation__section-title p-fondation__equality__title">Méthodologie des programmes égalité des Chances</h2>
                             <figure class="p-fondation__equality__media">
-                                <img src="http://placehold.it/750x350" alt="">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/Z_fYQugJIUs" frameborder="0" allowfullscreen></iframe>
                             </figure>
 
                             <!-- Download Item -->
