--- a/app/program-single.html
+++ b/app/program-single.html
@@ -241,7 +241,7 @@
                                     </div> -->
                                     <!-- Video single -->
                                     <div class="b-article__video">
-                                        <figure class="b-article__video--single">
+                                        <figure class="c-video">
                                             <iframe width="560" height="315" src="https://www.youtube.com/embed/Z_fYQugJIUs" frameborder="0" allowfullscreen></iframe>
                                         </figure>
                                     </div>
@@ -302,16 +302,16 @@
                                     <div class="b-article__video">
                                         <div class="l-p">
                                             <div class="b-article__video--patchwork">
-                                                <figure>
+                                                <figure class="c-video">
                                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/Z_fYQugJIUs" frameborder="0" allowfullscreen></iframe>
                                                 </figure>
-                                                <figcaption class="b-article__video__title">Habitus iram pugnantium concitat et dolorem proximos </figcaption>
+                                                <p class="b-article__video__title">Habitus iram pugnantium concitat et dolorem proximos </p>
                                             </div>
                                             <div class="b-article__video--patchwork">
-                                                <figure>
+                                                <figure class="c-video">
                                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/Z_fYQugJIUs" frameborder="0" allowfullscreen></iframe>
                                                 </figure>
-                                                <figcaption class="b-article__video__title">Habitus iram pugnantium concitat et dolorem proximos </figcaption>
+                                                <p class="b-article__video__title">Habitus iram pugnantium concitat et dolorem proximos </p>
                                             </div>
                                         </div>
                                     </div>
