update fondation videos

--- a/app/fondation.html
+++ b/app/fondation.html
@@ -231,9 +231,11 @@
                         <div class="l-content--article">
 
                             <h2 class="p-fondation__section-title p-fondation__culture__title">La Fondation Culture & Diversité en images</h2>
-                            <figure class="p-fondation__culture__media">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/Z_fYQugJIUs" frameborder="0" allowfullscreen></iframe>
-                            </figure>
+                            <div class="p-fondation__culture__media">
+                                <figure class="c-video">
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Z_fYQugJIUs" frameborder="0" allowfullscreen></iframe>
+                                </figure>
+                            </div>
 
                         </div>
                     </div>
@@ -250,9 +252,11 @@
                         <div class="l-content--article">
 
                             <h2 class="p-fondation__section-title p-fondation__equality__title">Méthodologie des programmes égalité des Chances</h2>
-                            <figure class="p-fondation__equality__media">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/Z_fYQugJIUs" frameborder="0" allowfullscreen></iframe>
-                            </figure>
+                            <div class="p-fondation__equality__media">
+                                <figure class="c-video">
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Z_fYQugJIUs" frameborder="0" allowfullscreen></iframe>
+                                </figure>
+                            </div>
 
                             <!-- Download Item -->
                             <article class="b-download__item">
