--- a/app/program-single.html
+++ b/app/program-single.html
@@ -224,7 +224,7 @@
                                     </div>
                                 </div>
                                 <div class="p-program-single__article-content__content">
-                                    <div class="p-program-single__article-content__intro">
+                                    <div class="b-article__intro">
                                         <div class="l-p">
                                             Le concours de conservateur du patrimoine étant
                                             très sélectif, ce programme a pour but d’offrir
