update video patchwork title

--- a/app/program-single.html
+++ b/app/program-single.html
@@ -305,13 +305,13 @@
                                                 <figure class="c-video">
                                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/Z_fYQugJIUs" frameborder="0" allowfullscreen></iframe>
                                                 </figure>
-                                                <p class="b-article__video__title">Habitus iram pugnantium concitat et dolorem proximos </p>
+                                                <span class="b-article__video__title">Habitus iram pugnantium concitat et dolorem proximos </span>
                                             </div>
                                             <div class="b-article__video--patchwork">
                                                 <figure class="c-video">
                                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/Z_fYQugJIUs" frameborder="0" allowfullscreen></iframe>
                                                 </figure>
-                                                <p class="b-article__video__title">Habitus iram pugnantium concitat et dolorem proximos </p>
+                                                <span class="b-article__video__title">Habitus iram pugnantium concitat et dolorem proximos </span>
                                             </div>
                                         </div>
                                     </div>
